--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ko">
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <script type="moudle" src="timeTable.js" defer></script>
+  <link rel="stylesheet" href="https://jaknndiius.github.io/TimeTableAPI/timeTableCss.css">
+  <script type="module" src="test.js" defer></script>
 </head>
 <body>
 </body>
